# torch-magic

./: .gitignore  G1_PLAN.md  PROGRESS.md  benchmark.py  benchmark_compile_modal.py  benchmark_fd_profile.py  benchmark_modal.py  perf.md  profile_lm.py  pyproject.toml  run.py  run_modal.py
configs/: .rvi-test-hires-modal.yaml.swo  boussBenchSat.yaml  boussBenchSat_modal.yaml  compare_cpu.yaml  compare_cpu_l128.yaml  compare_modal.yaml  compare_modal_l128.yaml  doubleDiffusion.yaml  doubleDiffusion_mps.yaml  dynamo_benchmark.yaml  dynamo_benchmark_modal.yaml  hydro_bench_anel_modal.yaml  profile_l128.yaml  profile_l384.yaml  profile_l384_chunk128.yaml  profile_l384_chunk256.yaml  profile_l384_chunk64.yaml  profile_l384_nochunk.yaml  resume_turbulent_movies.yaml  rvi-test-hires-modal.yaml  rvi-test-hires.yaml  rvi-test.yaml  turbulent_dynamo_gb200.yaml
scripts/: bench_sht_shtns.py  bench_sht_triton.py  compare_energies.py  convert_fortran_dumps.py  make_movie.py  make_movie_modal.py  test_sht_shtns.py
tests/: _am_runner.py  _analyze_diag.py  _anel_comp_runner.py  _anel_init_runner.py  _anel_matrix_runner.py  _anel_nl_runner.py  _anel_profiles_runner.py  _anel_rotic_runner.py  _anel_step_runner.py  _bisect_scheme_runner.py  _boussBenchSat_runner.py  _bouss_blocking_runner.py  _bouss_checkpoint_runner.py  _bouss_diag2_runner.py  _bouss_diag_runner.py  _bouss_matrix_diag.py  _bouss_multistep_runner.py  _bouss_step1_runner.py  _bpr353_runner.py  _compare_stages.py  _compare_testOutputs.py  _condic_diag_runner.py  _condic_multistep_runner.py  _couette_runner.py  (+76 more)
(+41 files in other folders)
