[project]
name = "magic-torch"
version = "0.1.0"
description = "PyTorch port of MagIC dynamo code"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pytest",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[dependency-groups]
dev = [
    "pytest-forked>=1.6.0",
]
