[project]
name = "magic-torch"
version = "0.1.0"
description = "PyTorch port of MagIC dynamo code"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pytest",
    "pyyaml>=6.0.3",
    "modal>=1.4.0",
    "scipy>=1.15.3",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[dependency-groups]
dev = [
    "pytest-forked>=1.6.0",
]
